# internal/api/swagger/swagger.json
@@ -424,6 +424,11 @@
                     "x-order": "0",
                     "example": "feed_2K9BWVNuo3sG4yM322fbP3mB6ls"
                 },
+                "rss_url": {
+                    "type": "string",
+                    "x-order": "1",
+                    "example": "https://example.com/feed.rss"
+                },
                 "title": {
                     "type": "string",
                     "x-order": "2",
